clusters/cl01tl/manifests/sparkyfitness/HTTPRoute-sparkyfitness.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sparkyfitness
  labels:
    app.kubernetes.io/name: sparkyfitness
    app.kubernetes.io/instance: sparkyfitness
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: sparkyfitness
    app.kubernetes.io/part-of: sparkyfitness
  namespace: sparkyfitness
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - "sparkyfitness.alexlebens.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mcp
      backendRefs:
        - group: ""
          kind: Service
          name: sparkyfitness-server
          port: 3010
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: sparkyfitness-frontend
          port: 80
          weight: 1
